# tinygl

./: .gitignore  API_STATUS.md  ASSET_PIPELINE.md  CMakeLists.txt  GEMINI.md  Git 提交规范指引.md  PROJECT_CAPABILITIES.md  README.md  main.cpp
.gemini/commands/: ask.toml  commit.toml  doc.toml  fix.toml  implement.toml  plan.toml  refactor.toml  review.toml  test.toml
.github/: copilot-instructions.md
demos/: CMakeLists.txt  demo_cube.cpp  demo_cube_instance.cpp  demo_draw_array.cpp  demo_draw_elements.cpp  demo_pip.cpp  demo_primitives.cpp  demo_quad.cpp  demo_quad2.cpp  demo_split_screen.cpp  demo_texture.cpp  demo_triangle.cpp  dots3d.c  dots3d.cpp  triangle.c  triangle.cpp  triangle3d.c  triangle3d.cpp
doc/: BUG_REPORT_RACE_CONDITION.md  FRAMEWORK_TESTER_ANALYSIS.md  REFACTOR_LOG_ECS.md
include/framework/: application.h  asset_formats.h  asset_handle.h  asset_manager.h  atlas.inl  camera.h  geometry.h  material.h  mesh.h  model.h  render_defs.h  resources.h  shader_pass.h  shared_asset.h  shared_asset_impl.h  texture.h  texture_manager.h  ui_renderer.h  ui_renderer_fast.h
include/rhi/: command_buffer.h  commands.h  device.h  encoder.h  gl_device.h  shader_registry.h  soft_device.h  soft_pipeline.h  types.h
include/tinygl/: app.h  application.h  camera.h  color.h  log.h  math.h  math_simd.h  maths.h  shader.h  tinygl.h  tmath.h  ui_renderer.h
include/tinygl/base/: color.h  colors.h  log.h  math_simd.h  tmath.h
include/tinygl/core/: buffer.h  geometry.h  gl_buffer.h  gl_defs.h  gl_shader.h  gl_texture.h  job_system.h  linear_allocator.h  shader_structs.h  texture.h  tiler.h  tinygl.h  vao.h
include/tinygl/framework/: application.h  mesh.h  (+11 more)
src/: CMakeLists.txt
src/core/: context.cpp  gl_buffer.cpp  gl_clip.cpp  gl_texture.cpp  gl_util.cpp  tinygl.cpp
src/framework/: application.cpp  asset_manager.cpp  atlas.c  geometry.cpp  load_texture.cpp  mesh.cpp  microui.c  model.cpp  olive.cpp  platform.cpp  texture.cpp  texture_manager.cpp  ui_renderer.cpp  ui_renderer_fast.cpp  vc.cpp
src/rhi/: gl_device.cpp  shader_registry.cpp  soft_device.cpp
src/tinygl/: gl_buffer.cpp  gl_texture.cpp  gl_util.cpp  job_system.cpp  linear_allocator.cpp  tiler.cpp  tinygl.cpp
tests/: CMakeLists.txt  ITestCase.h  framework_tester.cpp  rhi_runner.cpp  rhi_runner_app.h  rhi_tester.cpp  test_registry.h  test_runner.cpp  test_runner_app.h  tinygl_tester.cpp
tests/basic/blend_scissor/: CMakeLists.txt  blend_scissor_test.cpp
tests/basic/camera/: CMakeLists.txt  camera_test.cpp
tests/basic/copy_buffer_test/: copy_buffer_test.cpp
tests/basic/depth_test/: CMakeLists.txt  depth_test.cpp
tests/basic/discard_test/: CMakeLists.txt  discard_test.cpp
tests/basic/geometry/: geometry_test.cpp
tests/basic/instance/: CMakeLists.txt  instance.cpp
tests/basic/quad1/: quad1_test.cpp
tests/basic/quad2/: CMakeLists.txt  quad2_test.cpp
tests/basic/stencil_test/: stencil_test.cpp
tests/basic/triangle/: CMakeLists.txt  triangle_test.cpp
tests/framework/ecs/basic/: CMakeLists.txt  rhi_ecs_test.cpp
tests/framework/rhi/basic_triangle/: CMakeLists.txt  rhi_triangle_test.cpp
tests/framework/rhi/blend_scissor/: CMakeLists.txt  rhi_blend_scissor_test.cpp
tests/framework/rhi/gl_blend_scissor/: gl_blend_scissor.cpp
tests/framework/rhi/multithread_verify/: CMakeLists.txt  multithread_test.cpp  stress_test.cpp
tests/framework/rhi/soa_interleaved/: CMakeLists.txt  soa_interleaved_test.cpp
tests/framework/rhi/soa_verify/: soa_test.cpp
tests/framework/rhi/textured_cube/: CMakeLists.txt  rhi_textured_cube_test.cpp
tests/include/: material.h  mesh.h  model.h  render_defs.h  shader_pass.h  texture.h  texture_manager.h
tests/lighting/blinn_phong/: blinn_phong_test.cpp
tests/lighting/lighting_maps/: CMakeLists.txt  lighting_maps_test.cpp
tests/model_loading/: CMakeLists.txt  model_loading_test.cpp
tests/perf/swizzle_compare/: CMakeLists.txt  swizzle_compare.cpp
tests/rhi/basic_triangle/: rhi_triangle_test.cpp
tests/rhi/blend_scissor/: rhi_blend_scissor_test.cpp
tests/rhi/ecs/: CMakeLists.txt  rhi_ecs_test.cpp
tests/rhi/gl_blend_scissor/: CMakeLists.txt  gl_blend_scissor.cpp
tests/rhi/gl_verify/: CMakeLists.txt  gl_verify_test.cpp
tests/rhi/multithread_verify/: multithread_test.cpp
tests/rhi/soa_interleaved/: soa_interleaved_test.cpp
tests/rhi/soa_verify/: CMakeLists.txt  soa_test.cpp
tests/rhi/textured_cube/: CMakeLists.txt  rhi_textured_cube_test.cpp
tests/src/: mesh.cpp  model.cpp  texture.cpp  texture_manager.cpp
tests/texture/cube/: CMakeLists.txt  cube_test.cpp
tests/texture/filter/: filter_test.cpp
tests/texture/mipmap/: mipmap_test.cpp
tests/texture/texture1/: CMakeLists.txt  texture1_test.cpp
tests/tinygl/basic/blend_scissor/: blend_scissor_test.cpp
tests/tinygl/basic/camera/: camera_test.cpp
tests/tinygl/basic/copy_buffer_test/: CMakeLists.txt  copy_buffer_test.cpp
tests/tinygl/basic/depth_test/: depth_test.cpp
tests/tinygl/basic/discard_test/: CMakeLists.txt  discard_test.cpp
tests/tinygl/basic/geometry/: CMakeLists.txt  geometry_test.cpp
tests/tinygl/basic/instance/: instance.cpp
tests/tinygl/basic/quad1/: CMakeLists.txt  quad1_test.cpp
tests/tinygl/basic/quad2/: quad2_test.cpp
tests/tinygl/basic/stencil_test/: CMakeLists.txt  stencil_test.cpp
tests/tinygl/basic/triangle/: triangle_test.cpp
tests/tinygl/core/allocator_test/: CMakeLists.txt  allocator_test.cpp  tiler_test.cpp
tests/tinygl/lighting/blinn_phong/: CMakeLists.txt  blinn_phong_test.cpp
tests/tinygl/lighting/lighting_maps/: CMakeLists.txt  lighting_maps_test.cpp
tests/tinygl/model_loading/: CMakeLists.txt  model_loading_test.cpp
tests/tinygl/texture/cube/: CMakeLists.txt  cube_test.cpp
tests/tinygl/texture/filter/: CMakeLists.txt  filter_test.cpp
tests/tinygl/texture/mipmap/: CMakeLists.txt  mipmap_test.cpp
tests/tinygl/texture/texture1/: CMakeLists.txt  texture1_test.cpp
tools/: CMakeLists.txt  compile_assets.py
tools/asset_compiler/: CMakeLists.txt  asset_cooker.cpp  asset_cooker.h  main.cpp
vc/: container.h  log.h  tinygl.h  vc.c  vc.cpp
(+6 files in other folders)
